# reposummary

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  README.md  exitcodes.go  go.mod  go.sum  main.go  selfdoc.json  summarize.go  version.go
.github/workflows/: ci-pypi.yml
.rlsbl/: config.json  managed-files.json
.rlsbl/bases/: .goreleaser.yml
.rlsbl/bases/.github/workflows/: publish.yml
.rlsbl/changes/: 0.1.0.md  0.1.1.jsonl  0.1.1.md  0.1.2.jsonl  0.1.2.md  0.1.3.md  0.2.0.md  unreleased.jsonl
.rlsbl/releases/: unreleased.toml  v0.1.0.toml  v0.1.3.toml  v0.2.0.toml
.selfdoc/: manifest.json
.selfdoc/hashes/: hashes.json
.strictcli/: schema.json
docs/: _CLAUDE.md  _README.md  cli-index.md  cli-summarize.md  gen-index.md  guide.md
internal/cache/: cache.go  cache_test.go
internal/digest/: digest.go  digest_test.go
internal/gitdata/: gitdata.go  gitdata_test.go
internal/render/: render.go  render_test.go
internal/synth/: synth.go  synth_test.go
internal/test/: cli_test.go
internal/testutil/: testutil.go
internal/window/: window.go  window_test.go
npm/: install.js  install.test.js  package-lock.json  package.json
pypi/: pyproject.toml  test_wrapper.py
pypi/reposummary/: __init__.py  __main__.py
todo/: cache-pruning.md  polish-batch.md  windows-wrapper-support.md
