[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reposummary"
version = "0.2.0"
description = "Generate a Markdown journal of a git repository's activity over a time window"
license = "MIT"
requires-python = ">=3.8"
keywords = ["git", "repo", "summary", "markdown", "journal", "changelog", "cli", "rlsbl"]

[project.urls]
Homepage = "https://github.com/smm-h/reposummary"
Repository = "https://github.com/smm-h/reposummary"

[tool.setuptools]
packages = ["reposummary"]

[project.scripts]
reposummary = "reposummary:main"

[dependency-groups]
dev = ["pytest"]
